--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,12 @@
+*, *::after, *::before{
+	box-sizing: border-box;
+}
+
+
 body {
   margin: 0;
-  font-family: Poppins, Roboto, sans-serif;
+  padding: 0;
+  font-family: Poppins, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+		"Droid Sans", "Helvetica Neue", sans-serif;
  
 }
