--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .App {
-	width: 100vw;
+	// width: 100vw;
 	min-height: 100vh;
 	display: grid;
 	align-items: center;
@@ -7,6 +7,7 @@
 	justify-items: center;
 	align-items: center;
 	grid-template-rows: auto 1fr;
+	padding-bottom: 5rem;
 }
 
 @media (prefers-color-scheme: dark) {
